comments and phrasing for Q8

--- a/HW1-notebook.ipynb
+++ b/HW1-notebook.ipynb
@@ -164,6 +164,13 @@
    "outputs": [],
    "source": [
     "def predict(x):\n",
+    "    \"\"\"\n",
+    "    input:\n",
+    "    x: a tupple of floats of size 2 (x1, x2) represents an example\n",
+    "    -----\n",
+    "    output:\n",
+    "    res_class: an int representing the predicted class of x (can be 1, 2 or 3)\n",
+    "    \"\"\"\n",
     "    x1, x2 = x\n",
     "    if (x1 < 0.5 and x2 < 0.5):\n",
     "        res_class = 2\n",
@@ -188,9 +195,17 @@
    "outputs": [],
    "source": [
     "def calc_mce(pred, gold):\n",
+    "    \"\"\"\n",
+    "    input:\n",
+    "    pred: a numpy array of predictions\n",
+    "    gold: a numpy array of gold (actual) classes\n",
+    "    -----\n",
+    "    output:\n",
+    "    The proportion if misclassifications (errors) in the pred array\n",
+    "    \"\"\"\n",
     "    counter = 0\n",
     "    for p, g in zip(pred, gold):\n",
-    "        if p != g:\n",
+    "        if p != g: #count the misclassifications\n",
     "            counter += 1\n",
     "    return counter / len(pred)"
    ]
@@ -202,7 +217,15 @@
    "outputs": [],
    "source": [
     "def part_3(X_test, y_test):\n",
-    "    pred = np.apply_along_axis(predict, 1, X_test)\n",
+    "    \"\"\"\n",
+    "    input:\n",
+    "    X_test: a numpy array of test examples\n",
+    "    y_test: a numpy array of labels for the examples in X_test\n",
+    "    -----\n",
+    "    The function applies the manual prediction (using the function predict) on the X-test data and reports\n",
+    "    the misclassification rate\n",
+    "    \"\"\"\n",
+    "    pred = np.apply_along_axis(predict, 1, X_test) #get predictions\n",
     "    mce = calc_mce(pred, y_test)\n",
     "    print('The misclassification rate of manual classifier is: %.3f' % (mce))"
    ]
@@ -260,19 +283,43 @@
    ],
    "source": [
     "def sklearn_knn(X_train, y_train, X_test, y_test, k):\n",
-    "    neigh = KNeighborsClassifier(n_neighbors = k) #, weights = lambda x: np.where(x == 0, 1, 1 / (x ** 2))) # this was used as sanity check for part 7\n",
-    "    neigh.fit(X_train, y_train)\n",
-    "    pred = neigh.predict(X_test)\n",
-    "    mce = calc_mce(pred, y_test)\n",
+    "    \"\"\"\n",
+    "    input:\n",
+    "    X_train: a numpy array of training examples\n",
+    "    y_train: a numpy array of labels for the examples in X_train\n",
+    "    X_test: a numpy array of test examples\n",
+    "    y_test: a numpy array of labels for the examples in X_test\n",
+    "    k: an int representing the number of neighbors to take into account when using the k-nn algorithm\n",
+    "    -----\n",
+    "    output:\n",
+    "    mce: float representing the missclassification rate achieved by the application of the k-nn algorithm\n",
+    "    implemented in the sklearn library with k neighbors (training is done using X_train and y_train;\n",
+    "    misclassification rate is then calculated by comparing the predictions on X_test with the actual labels in y_test).\n",
+    "    \"\"\"\n",
+    "    neigh = KNeighborsClassifier(n_neighbors = k) #create model\n",
+    "    neigh.fit(X_train, y_train) #fit model using train data\n",
+    "    pred = neigh.predict(X_test) #get predictions for test data\n",
+    "    mce = calc_mce(pred, y_test) #calculate miscalssification error\n",
     "    print('For k = %d the misclassification rate of sklearn KNN is: %.3f' % (k, mce))\n",
     "    return mce\n",
     "\n",
     "def part_4(X_train, y_train, X_test, y_test):\n",
-    "    ks = [1, 5, 10]\n",
-    "    mces = []\n",
+    "    \"\"\"\n",
+    "    input:\n",
+    "    X_train: a numpy array of training examples\n",
+    "    y_train: a numpy array of labels for the examples in X_train\n",
+    "    X_test: a numpy array of test examples\n",
+    "    y_test: a numpy array of labels for the examples in X_test\n",
+    "    -----\n",
+    "    The function calls for sklearn_knn with different k values and then creates a plot of the \n",
+    "    missclassification rate versus 1/k.\n",
+    "    \"\"\"\n",
+    "    ks = [1, 5, 10] #the k values we want to check\n",
+    "    mces = [] #a list to hold the misclassification errors of differnet k values \n",
     "    for k in ks:\n",
-    "        mces.append(sklearn_knn(X_train, y_train, X_test, y_test, k))\n",
-    "    ks = [1/k for k in ks]\n",
+    "        mces.append(sklearn_knn(X_train, y_train, X_test, y_test, k)) #get miscalssification error with a specific k\n",
+    "    ks = [1/k for k in ks] #transform k to 1/k\n",
+    "    #plot graph\n",
     "    plt.plot(ks, mces)\n",
     "    plt.scatter(ks, mces)\n",
     "    plt.xlabel('1/k')\n",
@@ -337,14 +384,14 @@
     "        \"\"\"\n",
     "        Estimates to which class a given row (*observation*) belongs with the weighted prediction.\n",
     "        \"\"\"\n",
-    "        neighbor_classes, distances = self.get_neighbor_classes(observation)\n",
-    "        weights =  np.where(distances == 0, 1, 1 / (distances ** 2))\n",
-    "        classes = np.unique(neighbor_classes)\n",
+    "        neighbor_classes, distances = self.get_neighbor_classes(observation) #get k nearest neighbors and distances\n",
+    "        weights =  np.where(distances == 0, 1, 1 / (distances ** 2)) #get distances from weights\n",
+    "        classes = np.unique(neighbor_classes) #get possible classes\n",
     "        best_c, best_w = 0, 0\n",
-    "        for c in np.nditer(classes):\n",
-    "            w = np.sum(weights[np.nonzero(neighbor_classes == c)])\n",
-    "            best_w, best_c = (w, c) if w > best_w else (best_w, best_c)\n",
-    "        return best_c\n",
+    "        for c in np.nditer(classes): # for every class\n",
+    "            w = np.sum(weights[np.nonzero(neighbor_classes == c)]) #calculates the sum of weights (i.e. sum(wi*I(yi, c)))\n",
+    "            best_w, best_c = (w, c) if w > best_w else (best_w, best_c) #update best class and its weight\n",
+    "        return best_c #returns best class (i.e. with the maximal sum(wi*I(yi, c))\n",
     "\n",
     "    def predict(self, X: np.ndarray):\n",
     "        \"\"\"\n",
@@ -383,17 +430,32 @@
     }
    ],
    "source": [
-    "kinds = ['naive', 'weighted']\n",
+    "kinds = ['naive', 'weighted'] #the possible weighting methods, relevant for Q7\n",
     "\n",
     "def part_5(X_train, y_train, X_test, y_test, k, kind = 'naive'):\n",
+    "    \"\"\"\n",
+    "    input:\n",
+    "    X_train: a numpy array of training examples\n",
+    "    y_train: a numpy array of labels for the examples in X_train\n",
+    "    X_test: a numpy array of test examples\n",
+    "    y_test: a numpy array of labels for the examples in X_test\n",
+    "    k: an int representing the number of neighbors to take into account when using the k-nn algorithm\n",
+    "    kind: string (default = 'naive') represents the weighting method\n",
+    "    -----\n",
+    "    output:\n",
+    "    mce: float representing the missclassification rate achieved by the application of the naive implementation\n",
+    "    of the k-nn algorithm with k neighbors (training is done using X_train and y_train;\n",
+    "    misclassification rate is then calculated by comparing the predictions on X_test with the actual labels in y_test).\n",
+    "    \"\"\"\n",
     "    assert kind in kinds\n",
-    "    neigh = KNearestNeighbors(n_neighbors = k)\n",
-    "    neigh.fit(X_train, y_train)\n",
+    "    neigh = KNearestNeighbors(n_neighbors = k) #create model\n",
+    "    neigh.fit(X_train, y_train) #fir model using training data\n",
+    "    #get predictions for test data\n",
     "    if kind == 'naive':\n",
     "        pred = neigh.predict(X_test)\n",
-    "    else:\n",
+    "    else: #i.e. weighted\n",
     "        pred = neigh.predict_weighted(X_test)\n",
-    "    mce = calc_mce(pred, y_test)\n",
+    "    mce = calc_mce(pred, y_test) #calculate misclassification error\n",
     "    print('For k = %d the misclassification rate for %s KNN is: %.3f' % (k, kind, mce))\n",
     "    return mce\n",
     "\n",
@@ -404,7 +466,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Q6: Modify the code in (5) so that it implements a distance weighted k-NN\n",
+    "Q6: Modify the code in (5) so that it implements a distance weighted k-NN.\n",
+    "\n",
     "This part was done under the KNearestNeighbors class, see the functions predict_wighted and estimate_class_weighted."
    ]
   },
@@ -444,11 +507,22 @@
    ],
    "source": [
     "def part_7(X_train, y_train, X_test, y_test):\n",
-    "    ks = [1, 5, 10]\n",
-    "    mces = []\n",
+    "    \"\"\"\n",
+    "    input:\n",
+    "    X_train: a numpy array of training examples\n",
+    "    y_train: a numpy array of labels for the examples in X_train\n",
+    "    X_test: a numpy array of test examples\n",
+    "    y_test: a numpy array of labels for the examples in X_test\n",
+    "    -----\n",
+    "    The function calls for part_5 with different k values and with kind = 'weighted',\n",
+    "    then creates a plot of the missclassification rate versus 1/k.\n",
+    "    \"\"\"\n",
+    "    ks = [1, 5, 10] #the k values we want to check\n",
+    "    mces = [] #a list to hold the misclassification errors of differnet k values\n",
     "    for k in ks:\n",
-    "        mces.append(part_5(X_train, y_train, X_test, y_test, k, kind = 'weighted'))\n",
-    "    ks = [1/k for k in ks]\n",
+    "        mces.append(part_5(X_train, y_train, X_test, y_test, k, kind = 'weighted')) #get misclassification error with a specific k\n",
+    "    ks = [1/k for k in ks] #transform k to 1/k\n",
+    "    #plot graph\n",
     "    plt.plot(ks, mces)\n",
     "    plt.scatter(ks, mces)\n",
     "    plt.xlabel('1/k')\n",
@@ -463,14 +537,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Q8: What would you do if the features are measured by differetn units?"
+    "Q8: What would you do if the features are measured by different units?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will normalize the features between values of 0 - 1"
+    "We will scale the features (for example to the 0 - 1 range by using minmax scaling, or standardizing the different features). In the case in which only the units differ it is also possible to transform them accordingly (e.g. to tranform from Celsius to Fahrenheit we would apply 1.8*c + 32 to get f) though if other charectaristics differ it might not be good enough. "
    ]
   }
  ],
@@ -490,7 +564,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
