--- a/HW3/HW3_notebook.ipynb
+++ b/HW3/HW3_notebook.ipynb
@@ -358,7 +358,7 @@
    ],
    "source": [
     "feat_importances = pd.Series(random_forest.feature_importances_, index=X_train.columns)\n",
-    "_=feat_importances.nlargest(20).plot(kind='barh')\n",
+    "_=feat_importances.nlargest(20).plot(kind='bar')\n",
     "_=plt.xlabel(\"feature importances\")"
    ]
   },
@@ -404,7 +404,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
